Thu Nov 29 10:12:20 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2677_Regression/server.cpp:
        * tests/Bug_3542_Regression/server.cpp:
          Fixed compile problems

Wed Nov 28 14:14:51 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/util/utl_global.cpp (destroy):

          Added check for null before calling
          reset_last_in_same_parent_scope() on the internal CORBA
          module AST node. Thanks to Simon Massey
          <simon dot massey at primstech dot com> for pointing
          out this problem.

Wed Nov 28 07:33:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/Any.cpp:
        * tao/AnyTypeCode/Any_Basic_Impl.cpp:
        * tao/AnyTypeCode/Any_Impl_T.cpp:
        * tao/AnyTypeCode/Any_Special_Impl_T.cpp:
        * tao/AnyTypeCode/Objref_TypeCode.h:
          Layout changes

        * tests/Bug_2936_Regression/bug2936.cpp:
          Fixed compile problems

Tue Nov 27 21:50:14 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/loader_const.idl:
        * tests/IDL_Test/PEMNaming.idl:
        * TAO_IDL/ast/ast_module.cpp:
          Fixed fuzz errors.

Tue Nov 27 12:43:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Logging_Service/Basic_Logging_Service/Basic_Logging_Service.mpc:
          Install fixes for install data

Tue Nov 27 11:52:55 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Trading_Service/Trading_Service.mpc:
          Install fixes for install data

Tue Nov 27 11:24:11 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Naming_Service/Naming_Service.mpc:
        * orbsvcs/Notify_Service/Notify_Service.mpc:
          Install fixes for install data

Tue Nov 27 10:27:01 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/catior/catior.mpc:
        * utils/nslist/nslist.mpc:
          Install fixes
