@@ -1,3 +1,9 @@
+Thu Nov 29 10:13:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/DLL_ORB/client.cpp:
+        * tests/DLL_ORB/server.cpp:
+          Fixed compile problems
+
 Thu Nov 29 10:12:20 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Bug_2677_Regression/server.cpp:
